# controllability-of-complex-networks

./: .gitignore  Inverted pendulum on a cart.ipynb  README.md  pyproject.toml
matlab/: dummy_network.m
networks/: dynamical_mode_decomposition.ipynb  line-network.ipynb  star-network.ipynb
notebooks/: 01_line-network.ipynb  02_dynamical_mode_decomposition.ipynb  03_network_oscilators.ipynb  04_data_driven_control_baggio.ipynb  star-network.ipynb
