[tool.poetry]
name = "controllability"
version = "0.1.0"
description = ""
authors = ["Matej Kerekrety <matej.kerekrety@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
notebook = "^6.3.0"
# mk-network = {git = "https://github.com/matejker/network.git"}
# networkx = "^2.5.1"
control = "^0.9.0"
slycot = "^0.4.0"
networkx = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
